# windows-gpt-transform

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: AddPortableLLVMPlugin.cmake  windows-llvm-plugin.def.in
include/windows-gpt-transform/: windows-gpt-transform.h
lib/: CMakeLists.txt  plugin-registration.cpp  windows-gpt-transform.cpp
